Correcao dos projetos

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                     <p>
                         O Stratws Dashboard permite o acompanhamento e a análise de indicadores / dados estratégicos de uma empresa a partir de gráficos e tabelas interativas. A ferramenta foi concebida para permitir a montagem de dashboards pelo próprio usuário. <b>Tecnologias</b>: HTML5, JavaScript, plataforma .NET Framework, com uso de DataServices (padrão OData) e Entity Framework.
-                        <br><b>Data:</b> 2014 - <b>Status:</b> ativo. </p>
+                        <br><b>Data:</b> 2014
                     </p>
 
                     <img thumb src="images/projects/stratws.jpg">
@@ -74,7 +74,7 @@
                     <h2>Stratws Gestão Estratégica</h2>
                     <p>
                         Ferramenta que facilita gestores no desenvolvimento de um modelo de gestão de performance, com a capacidade de gerir projetos de performance baseados nas metodologias: Balanced Socored (BSC), Business Intelligence (BI); dentre outros.
-                        <br><b>Data:</b> 2010 - <b>Status:</b> ativo. </p>
+                        <br><b>Data:</b> 2010
 
                     </p>
                     <img thumb src="images/projects/toai_jornal.jpg">
@@ -82,7 +82,7 @@
                     <h2>Serviço Toaí</h2>
                     <p>
                         Rede Social Móvel. Serviço oferecido aos clientes das operadoras de telefonia celular do Brasil (Oi, Brasil Telecom, TIM, Vivo, Claro, etc).
-                        <br><b>Data:</b> 2009 - <b>Status:</b> cancelado. </p>
+                        <br><b>Data:</b> 2009
                     </p>
 
                     <img thumb src="images/projects/hosp.gif">                    
@@ -90,7 +90,7 @@
                     <h2>Gerenciador de um hospital</h2>
                     <p>
                         Sistema desenvolvido para um hospital de Belo Horizonte para controlar os pacientes e consultas. <br> Desenvolvido utilizando a ferramenta Delphi e o banco de dados Oracle.
-                        <br><b>Data:</b> 2008 - <b>Status:</b> ativo. </p>
+                        <br><b>Data:</b> 2008
                     </p>
 
                     <img thumb src="images/projects/fotografia.jpg">
@@ -98,7 +98,7 @@
                     <p>
                         Desenvolvido em 2005 para suprir a demanda por segurança na distribuição das provinhas das fotos de formatura. 
                         A ferramenta gera um álbum protegido por senha e data de expiração, que é encaminhado para os formandos.
-                        <br><b>Data:</b> 2005 - <b>Status:</b> ativo. 
+                        <br><b>Data:</b> 2005
                     </p>
                 </div>
             </div>
