Correção de texto

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         Ainda não conhece meus trabalhos? Clique <a href="#projects">aqui</a> ou role a tela mais um pouco!
                     </div>
                     <div>
-                        Você sabe o que é um design responsável? <br>
+                        Você sabe o que é um design responsivo? <br>
                         <a href="http://www.w3schools.com/html/html_responsive.asp" target="_blank">Saiba mais!</a>
                     </div>
                     <div>
